[gd_scene load_steps=14 format=3 uid="uid://de8cye1e0yply"]

[ext_resource type="Script" uid="uid://bkxomrpjm8bru" path="res://addons/lan_multiplayer/scripts/lobby_controller.gd" id="1_7uolb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o5xp7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a0lqo"]
bg_color = Color(0.419813, 0.419813, 0.419813, 1)

[sub_resource type="Theme" id="Theme_nu6n8"]
Button/font_sizes/font_size = 16
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null
Label/font_sizes/font_size = 16
Label/fonts/font = null
Label/styles/normal = SubResource("StyleBoxFlat_o5xp7")
LineEdit/font_sizes/font_size = 16
LineEdit/fonts/font = null
LineEdit/styles/focus = null
LineEdit/styles/normal = null
LineEdit/styles/read_only = null
Panel/styles/panel = SubResource("StyleBoxFlat_a0lqo")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ediwl"]
bg_color = Color(0.227451, 0.227451, 0.227451, 1)

[sub_resource type="Animation" id="Animation_ll5m1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["SEARCHING FOR GAMES..."]
}

[sub_resource type="Animation" id="Animation_j1wva"]
resource_name = "load"
length = 1.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": ["SEARCHING FOR GAMES...", "SEARCHING FOR GAMES.", "SEARCHING FOR GAMES..", "SEARCHING FOR GAMES..."]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7qa8r"]
_data = {
&"RESET": SubResource("Animation_ll5m1"),
&"load": SubResource("Animation_j1wva")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j87d1"]

[sub_resource type="Animation" id="Animation_80ao1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_gmsa6"]
resource_name = "full"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6kecv"]
resource_name = "invalid"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gw1d3"]
_data = {
&"RESET": SubResource("Animation_80ao1"),
&"full": SubResource("Animation_gmsa6"),
&"invalid": SubResource("Animation_6kecv")
}

[node name="lobby_controller" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7uolb")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_nu6n8")

[node name="main" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -120.0
offset_right = 220.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_ediwl")

[node name="searching_text" type="Label" parent="main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -120.0
offset_right = 220.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
mouse_filter = 0
text = "SEARCHING FOR GAMES..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="main/searching_text"]
libraries = {
&"": SubResource("AnimationLibrary_7qa8r")
}
autoplay = "load"

[node name="ScrollContainer" type="ScrollContainer" parent="main"]
custom_minimum_size = Vector2(440, 185)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -120.0
offset_right = 220.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2

[node name="list" type="VBoxContainer" parent="main/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="host_button" type="Button" parent="main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = 80.0
offset_right = 220.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
text = "HOST"

[node name="room" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -120.0
offset_right = 220.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Panel" type="Panel" parent="room"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -92.5
offset_right = 220.0
offset_bottom = 92.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_ediwl")

[node name="room" type="VBoxContainer" parent="room"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -92.5
offset_right = 220.0
offset_bottom = 92.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -1

[node name="host" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="start_button" type="Button" parent="host"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = 80.0
offset_right = -90.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
text = "START"

[node name="settings_button" type="Button" parent="host"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = 80.0
offset_right = 70.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
text = "SETTINGS"

[node name="back_button" type="Button" parent="host"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 90.0
offset_top = 80.0
offset_right = 220.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
text = "BACK"

[node name="join" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="back_button" type="Button" parent="join"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = 80.0
offset_right = 220.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
text = "BACK"

[node name="settings" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="game_name" type="LineEdit" parent="settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -120.0
offset_right = 220.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
text = "My Game"
placeholder_text = "Insert game name"
alignment = 1
caret_blink = true

[node name="max_players" type="SpinBox" parent="settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -65.0
offset_right = -10.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
min_value = 2.0
max_value = 6.0
value = 6.0
alignment = 1
prefix = "Max Players:"

[node name="time" type="SpinBox" parent="settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -65.0
offset_right = 220.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
min_value = 1.0
max_value = 15.0
value = 15.0
alignment = 1
prefix = "Time:"
suffix = "minutes"

[node name="back_button" type="Button" parent="settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = 80.0
offset_right = 220.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
text = "BACK"

[node name="error_text" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 122.0
offset_right = 100.0
offset_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
theme_override_styles/normal = SubResource("StyleBoxEmpty_j87d1")
text = "*Error: ..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="error_text"]
libraries = {
&"": SubResource("AnimationLibrary_gw1d3")
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="main/host_button" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="host/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="host/settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="host/back_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="join/back_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="settings/back_button" to="." method="_on_settings_back_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
